# logmedaddy

./: Cargo.toml  README.md
src/: args.rs  config.rs  defines.rs  lib.rs  log.rs
